--- a/assets/styles/scss/pages/registration.css
+++ b/assets/styles/scss/pages/registration.css
@@ -3,7 +3,16 @@
   text-align: center;
 }
 
+.button a {
+  background-color: aqua;
+  padding: 30px 50px;
+  border-radius: 10px;
+  text-decoration: none;
+  color: white;
+}
+
 .registration__pop-up {
+  display: none;
   width: 100%;
   height: 100%;
   position: fixed;
@@ -11,6 +20,10 @@
   top: 0;
   background-color: rgb(63, 61, 61);
   z-index: 2;
+}
+
+.registration__pop-up.active {
+  display: block;
 }
 
 .registration__pop-up_container {
@@ -157,7 +170,7 @@
   font-weight: 600;
   font-size: 26px;
   line-height: 15px;
-  padding-top: 0;
+  margin-top: 0;
 }
 
 .customization__title_description {
