--- a/assets/styles/scss/pages/customization.css
+++ b/assets/styles/scss/pages/customization.css
@@ -11,7 +11,7 @@
   color: white;
 }
 
-.registration__pop-up {
+.customization__pop-up {
   display: none;
   width: 100%;
   height: 100%;
@@ -22,17 +22,17 @@
   z-index: 2;
 }
 
-.registration__pop-up.active {
+.customization__pop-up.active {
   display: block;
 }
 
-.registration__pop-up_container {
+.customization__pop-up_container {
   display: flex;
   width: 100%;
   height: 100%;
 }
 
-.registration__pop-up_body {
+.customization__pop-up_body {
   margin: auto;
   width: 500px;
   background-color: rgb(247, 245, 245);
@@ -42,23 +42,22 @@
   position: relative;
 }
 
-.registration__pop-up_body input {
+.customization__pop-up_body input {
   display: block;
   margin: 25px auto 0px auto;
   width: 330px;
   padding: 7px 17px;
-  background-color: rgba(228, 238, 238, 1);
+  background-color: rgb(228, 238, 238);
   border-radius: 15px;
-  border-color: rgba(8, 155, 171, 1);
+  border-color: rgb(8, 155, 171);
   border-width: 3px;
-  //   color: rgba(247, 199, 142, 1);
 }
 
-.registration__pop-up_body input:focus {
+.customization__pop-up_body input:focus {
   outline: none;
 }
 
-.registration__pop-up_body button {
+.customization__pop-up_body button {
   cursor: pointer;
   display: block;
   width: 330px;
@@ -67,10 +66,10 @@
   border: none;
   color: white;
   border-radius: 10px;
-  background-color: rgba(247, 199, 142, 1);
+  background-color: rgb(247, 199, 142);
 }
 
-.registration__pop-up_close {
+.customization__pop-up_close {
   position: absolute;
   top: 15px;
   right: 15px;
@@ -78,8 +77,8 @@
   cursor: pointer;
 }
 
-.registration__title {
-  color: rgba(255, 124, 2, 1);
+.customization__title {
+  color: rgb(255, 124, 2);
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 600;
@@ -87,7 +86,7 @@
   line-height: 15px;
 }
 
-.registration__title_description {
+.customization__title_description {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 300;
@@ -95,10 +94,10 @@
   line-height: 30px;
 }
 
-.registration__text {
+.customization__text {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 300;
   font-size: 20px;
   line-height: 30px;
-}
+}/*# sourceMappingURL=customization.css.map */
