--- a/assets/styles/scss/pages/customization.scss
+++ b/assets/styles/scss/pages/customization.scss
@@ -11,7 +11,7 @@
   color: white;
 }
 
-.registration__pop-up {
+.customization__pop-up {
   display: none;
   width: 100%;
   height: 100%;
@@ -22,17 +22,17 @@
   z-index: 2;
 }
 
-.registration__pop-up.active {
+.customization__pop-up.active {
   display: block;
 }
 
-.registration__pop-up_container {
+.customization__pop-up_container {
   display: flex;
   width: 100%;
   height: 100%;
 }
 
-.registration__pop-up_body {
+.customization__pop-up_body {
   margin: auto;
   width: 500px;
   background-color: rgb(247, 245, 245);
@@ -42,7 +42,7 @@
   position: relative;
 }
 
-.registration__pop-up_body input {
+.customization__pop-up_body input {
   display: block;
   margin: 25px auto 0px auto;
   width: 330px;
@@ -54,11 +54,11 @@
   //   color: rgba(247, 199, 142, 1);
 }
 
-.registration__pop-up_body input:focus {
+.customization__pop-up_body input:focus {
   outline: none;
 }
 
-.registration__pop-up_body button {
+.customization__pop-up_body button {
   cursor: pointer;
   display: block;
   width: 330px;
@@ -70,7 +70,7 @@
   background-color: rgba(247, 199, 142, 1);
 }
 
-.registration__pop-up_close {
+.customization__pop-up_close {
   position: absolute;
   top: 15px;
   right: 15px;
@@ -78,7 +78,7 @@
   cursor: pointer;
 }
 
-.registration__title {
+.customization__title {
   color: rgba(255, 124, 2, 1);
   font-family: "Montserrat";
   font-style: normal;
@@ -87,7 +87,7 @@
   line-height: 15px;
 }
 
-.registration__title_description {
+.customization__title_description {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 300;
@@ -95,7 +95,7 @@
   line-height: 30px;
 }
 
-.registration__text {
+.customization__text {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 300;
