--- a/assets/styles/scss/pages/index.css
+++ b/assets/styles/scss/pages/index.css
@@ -251,6 +251,36 @@ button {
   background-color: #09b4c7;
 }
 
+.b-container {
+  width: 200px;
+  height: 150px;
+  background-color: #ccc;
+  margin: 0px auto;
+  padding: 10px;
+  font-size: 30px;
+  color: #fff;
+}
+
+.profile-notification {
+  position: fixed;
+  width: 100%;
+  min-height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  z-index: 11;
+  top: 0px;
+}
+
+.b-popup .b-popup-content {
+  margin: 40px auto 0px auto;
+  width: 100px;
+  height: 40px;
+  padding: 10px;
+  background-color: #c5c5c5;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px #000;
+}
+
 @media screen and (min-width: 1280px) and (max-width: 1440px) {
   .profile-RSK {
     width: 43.54vw;
