--- a/assets/styles/scss/main.css
+++ b/assets/styles/scss/main.css
@@ -1,25 +1,20 @@
 @import "./layouts/normalize.css";
-
 @font-face {
   font-family: "Montserrat";
   src: url(../../../fonts/Montserrat.ttf);
 }
-
 @font-face {
   font-family: "Inter";
   src: url(../../../fonts/Inter.ttf);
 }
-
 @font-face {
   font-family: "Montserrat";
   src: url(../../../fonts/Montserrat.ttf);
 }
-
 @font-face {
   font-family: "Inter";
   src: url(../../../fonts/Inter.ttf);
 }
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -36,7 +31,6 @@
   background-color: #089BAB;
   border-radius: 0px 60px 60px 0px;
 }
-
 .side-bar nav {
   display: flex;
   flex-direction: column;
@@ -46,7 +40,6 @@
   height: 61.7%;
   cursor: pointer;
 }
-
 .side-bar nav li {
   width: 100%;
   list-style-type: none;
@@ -62,12 +55,10 @@
   color: white;
   transition-duration: 0.6s;
 }
-
 .side-bar__link :hover {
   transition-duration: 0.6s;
   margin-left: 20%;
 }
-
 .side-bar__link img {
   width: 67%;
   margin-bottom: 13px;
@@ -77,38 +68,32 @@
   .side-bar {
     width: 11.18vw;
   }
-
   .side-bar__link {
     font-weight: 700;
     font-size: 14px;
     font-family: "Montserrat", sans-serif;
   }
 }
-
 @media screen and (min-width: 1440px) and (max-width: 1920px) {
   .side-bar {
     width: 161px;
   }
-
   .side-bar__link {
     font-weight: 700;
     font-size: 14px;
     font-family: "Montserrat", sans-serif;
   }
 }
-
 @media screen and (min-width: 1921px) {
   .side-bar {
     width: 8.39vw;
   }
-
   .side-bar__link {
     font-weight: 700;
     font-size: calc((100vw - 666px) / 89);
     font-family: "Montserrat", sans-serif;
   }
 }
-
 .articles-wrapper {
   background-color: #E4EEEE;
 }
@@ -129,27 +114,22 @@
   border-radius: 26px 26px 0 0;
   cursor: pointer;
 }
-
 .articles-section__article {
   color: white;
   letter-spacing: 0.5px;
   padding: 2vh 0;
 }
-
 .articles-section__article_food {
   border-radius: 25px 0 0 0;
 }
-
 .articles-section__article_psycho {
   border-radius: 0 25px 0 0;
 }
-
 .articles-section__link {
   text-decoration: none;
   width: 100%;
   text-align: center;
 }
-
 .articles-section__article:hover {
   background-color: white !important;
   color: #089BAB !important;
@@ -166,25 +146,21 @@
   margin-right: 10vw;
   grid-gap: 3vw;
 }
-
 .articles-topics__img {
   max-width: 100%;
   border-radius: 3px;
   cursor: pointer;
 }
-
 .articles-topics__title {
   letter-spacing: 0.5px;
   margin-top: 1.5vh;
   margin-bottom: 0;
   color: black;
 }
-
 .articles-topics__text {
   letter-spacing: 0.7px;
   margin: 1.5vh 0 2.5vh 0;
 }
-
 .articles-topics__link {
   text-decoration: none;
   color: rgba(0, 0, 0, 0.7);
@@ -210,19 +186,16 @@
 .topic {
   margin: 5vh 15vw 5vh 25vw;
 }
-
 .topic__title {
   padding-top: 6vh;
   letter-spacing: 0.7px;
   text-align: center;
 }
-
 .topic__subtitle {
   letter-spacing: 0.8px;
   text-align: center;
   margin: 3vh 0;
 }
-
 .topic__text {
   color: rgba(0, 0, 0, 0.6);
   letter-spacing: 0.7px;
@@ -230,11 +203,9 @@
   text-align: justify;
   margin: 2vh 0;
 }
-
 .topic__text_bold {
   font-weight: 700;
 }
-
 .topic__img-left {
   border-radius: 5px;
   width: 25vw;
@@ -242,7 +213,6 @@
   margin-right: 2vw;
   margin-top: 2vh;
 }
-
 .topic__img-right {
   border-radius: 5px;
   width: 25vw;
@@ -250,7 +220,6 @@
   margin-left: 2vw;
   margin-top: 2vh;
 }
-
 .topic__back {
   display: flex;
   align-items: center;
@@ -258,15 +227,12 @@
   color: white;
   letter-spacing: 0.8px;
 }
-
 .topic__img-back {
   width: 30%;
 }
-
 .topic__list {
   margin-left: 5vw;
 }
-
 .topic__top {
   margin: 3vh 0;
 }
@@ -288,90 +254,76 @@
     font-size: calc((100vw - 720px) / 40);
     font-family: "Montserrat", sans-serif;
   }
-
   .articles-topics__text,
   .articles-section__article {
     font-weight: 300;
     font-size: calc((100vw - 160px) / 80);
     font-family: "Montserrat", sans-serif;
   }
-
   .articles-copy {
     font-weight: 300;
     font-size: calc((100vw - 320px) / 80);
     font-family: "Montserrat", sans-serif;
   }
-
   .topic__text {
     font-weight: 300;
     font-size: calc((100vw - 160px) / 80);
     font-family: "Montserrat", sans-serif;
   }
-
   .topic__title {
     font-weight: 600;
     font-size: calc((100vw - 2880px) / -80);
     font-family: "Montserrat", sans-serif;
   }
-
   .topic__subtitle {
     font-weight: 600;
     font-size: 14px;
     font-family: "Montserrat", sans-serif;
   }
-
   .topic__back {
     font-weight: 600;
     font-size: calc((100vw - 0px) / 80);
     font-family: "Montserrat", sans-serif;
   }
 }
-
 @media screen and (min-width: 1441px) and (max-width: 1920px) {
   .articles-topics__title {
     font-weight: 600;
     font-size: calc((100vw + 714.5px) / 119.75);
     font-family: "Montserrat", sans-serif;
   }
-
   .articles-topics__text,
   .articles-section__article {
     font-weight: 300;
     font-size: calc((100vw + 475px) / 119.75);
     font-family: "Montserrat", sans-serif;
   }
-
   .articles-copy {
     font-weight: 300;
     font-size: calc((100vw + 235.5px) / 119.75);
     font-family: "Montserrat", sans-serif;
   }
-
   .topic__text {
     font-weight: 300;
     font-size: calc((100vw + 714.5px) / 119.75);
     font-family: "Montserrat", sans-serif;
   }
-
   .topic__title {
     font-weight: 600;
     font-size: calc((100vw - 4px) / 79.8);
     font-family: "Montserrat", sans-serif;
   }
-
   .topic__subtitle {
     font-weight: 600;
     font-size: calc((100vw + 1912px) / 239.5);
     font-family: "Montserrat", sans-serif;
   }
-
   .topic__back {
     font-weight: 600;
     font-size: calc((100vw + 714.5px) / 119.75);
     font-family: "Montserrat", sans-serif;
   }
 }
-
 body {
   background-color: #E4EEEE;
 }
@@ -425,7 +377,6 @@ body {
   align-items: center;
   justify-content: center;
 }
-
 .diary-diet-tracker__btn-arrow {
   width: 10px;
   height: 10px;
@@ -435,26 +386,25 @@ body {
   margin-left: 15px;
   margin-bottom: 0.3vw;
 }
-
 .diary-diet-tracker__content {
   font-weight: 400;
   font-size: 23px;
   font-family: "Montserrat", sans-serif;
 }
-
 .diary-diet-tracker__bottom-bar {
   background-color: #089BAB;
   height: 73px;
   border-radius: 0 0 35px 35px;
 }
 
+.diary-table-string-2,
 .diary-table-string-1,
 .diary-table-string {
   display: flex;
   justify-content: space-between;
   height: 64px;
 }
-
+.diary-table-string-2__meal-name,
 .diary-table-string-1__meal-name,
 .diary-table-string__meal-name {
   display: flex;
@@ -463,13 +413,13 @@ body {
   margin-left: 3%;
   width: 15%;
 }
-
+.diary-table-string-2__meal-name_color_orange,
 .diary-table-string-1__meal-name_color_orange,
 .diary-table-string__meal-name_color_orange {
   color: #FF7C02;
   font-weight: 700;
 }
-
+.diary-table-string-2__add-btn,
 .diary-table-string-1__add-btn,
 .diary-table-string__add-btn {
   background-color: transparent;
@@ -478,17 +428,13 @@ body {
   margin-top: 5%;
   transition-duration: 0.7s;
 }
-
+.diary-table-string-2__add-btn-img,
 .diary-table-string-1__add-btn-img,
 .diary-table-string__add-btn-img {
   max-width: 35px;
 }
-
+.diary-table-string-2__column-names,
 .diary-table-string-1__column-names,
-.diary-table-string__add-btn-img {
-  max-width: 35px;
-}
-
 .diary-table-string__column-names {
   display: flex;
   justify-content: space-between;
@@ -499,13 +445,14 @@ body {
   font-size: 16px;
   font-family: "Montserrat", sans-serif;
 }
-
+.diary-table-string-2__column-names_color_dark-blue,
 .diary-table-string-1__column-names_color_dark-blue,
 .diary-table-string__column-names_color_dark-blue {
   color: #089BAB;
   font-weight: 700;
+  text-align: left;
 }
-
+.diary-table-string-2_color_blue,
 .diary-table-string-1_color_blue,
 .diary-table-string_color_blue {
   background-color: #E4EEEE;
@@ -530,7 +477,6 @@ body {
   justify-content: space-evenly;
   height: 335px;
 }
-
 .diary-water-tracker__top-bar {
   font-weight: 400;
   font-size: 23px;
@@ -540,38 +486,31 @@ body {
   justify-content: space-between;
   align-items: center;
 }
-
 .diary-water-tracker__top-bar-name {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-
 .diary-water-tracker__img-water-drop {
   width: 3.5vw;
   max-width: 50px;
   margin-right: 8px;
 }
-
 .diary-water-tracker__crrnt-res {
   font-size: 25px;
 }
-
 .diary-water-tracker__crrnt-res-ml {
   font-size: 25px;
 }
-
 .diary-water-tracker__top-res {
   font-size: 25px;
   color: rgba(0, 0, 0, 0.6);
 }
-
 .diary-water-tracker__top-res_font_inter {
   font-weight: 400;
   font-size: 25px;
   font-family: "Inter", sans-serif;
 }
-
 .diary-water-tracker__text {
   width: 88%;
   font-weight: 400;
@@ -581,35 +520,28 @@ body {
   line-height: 25px;
   color: rgba(0, 0, 0, 0.6980392157);
 }
-
 .diary-water-tracker__form {
   display: flex;
   flex-direction: row-reverse;
 }
-
 .diary-water-tracker__img {
   width: 60px;
   cursor: pointer;
   margin-right: 8px;
 }
-
-.diary-water-tracker__label:hover,
-.diary-water-tracker__label:hover~.diary-water-tracker__label {
+.diary-water-tracker__label:hover, .diary-water-tracker__label:hover ~ .diary-water-tracker__label {
   opacity: 1;
   transition-duration: 1s;
 }
-
 .diary-water-tracker__label {
   opacity: 0.25;
   transition-duration: 1s;
 }
-
 .diary-water-tracker__input {
   visibility: hidden;
   position: absolute;
 }
-
-.diary-water-tracker__input:checked~.diary-water-tracker__label {
+.diary-water-tracker__input:checked ~ .diary-water-tracker__label {
   opacity: 1;
   transition-duration: 1s;
 }
@@ -618,83 +550,68 @@ body {
   .diary-inner {
     max-width: 70vw;
   }
-
   .diary-water-tracker__top-bar {
     width: 40vw;
   }
-
   .diary-water-tracker__img {
     width: 3.5vw;
   }
-
   .diary-table-string__column-names {
     width: 45vw;
   }
-
   .diary-water-tracker__text,
   .diary-water-tracker__top-bar-name,
   .diary-table-string__meal-name,
   .diary-diet-tracker__calendar-btn {
     font-size: 1.5vw;
   }
-
   .diary-table-string__column-names {
     font-size: 1vw;
   }
-
   .diary-water-tracker__crrnt-res,
   .diary-water-tracker__top-res,
   .diary-water-tracker__crrnt-res-ml {
     font-size: 1.6vw;
   }
 }
-
 @media screen and (min-width: 1280px) and (max-width: 1920px) {
   .diary-wrapper {
     max-width: 1440px;
   }
 }
-
 @media screen and (max-width: 1279px) {
   .wrapper {
     display: none;
   }
 }
-
 @media screen and (min-width: 1921px) {
   .diary-wrapper {
     width: 75vw;
     margin: auto;
   }
-
   .diary-water-tracker__text,
   .diary-water-tracker__top-bar-name,
   .diary-table-string__meal-name,
   .diary-diet-tracker__calendar-btn {
     font-size: 1.2vw;
   }
-
   .diary-table-string__column-names {
     font-size: 1vw;
   }
-
   .diary-water-tracker__crrnt-res,
   .diary-water-tracker__top-res,
   .diary-water-tracker__crrnt-res-ml {
     font-size: 1.6vw;
   }
 }
-
 @font-face {
   font-family: "Montserrat";
   src: url(../../../fonts/Montserrat.ttf);
 }
-
 @font-face {
   font-family: "Inter";
   src: url(../../../fonts/Inter.ttf);
 }
-
 body {
   background-color: #E4EEEE;
 }
@@ -721,7 +638,6 @@ button {
   width: 100%;
   height: 100%;
 }
-
 .profile .profile-RSK {
   display: flex;
   flex-direction: column;
@@ -772,7 +688,6 @@ button {
   width: 65.55%;
   line-height: 150%;
 }
-
 .profile-RSK__macro div {
   display: flex;
   flex-direction: column;
@@ -783,7 +698,6 @@ button {
 .profile-RSK__weight {
   margin: 2% 0 0 5%;
 }
-
 .profile-RSK__weight span {
   font-weight: 700;
 }
@@ -973,12 +887,10 @@ button {
   border-radius: 35px;
   box-shadow: 0px 0px 10px #000;
 }
-
 .profile-notification__content img {
   width: 8.8%;
   margin-bottom: 1.19%;
 }
-
 .profile-notification__content div {
   text-align: center;
 }
@@ -986,7 +898,6 @@ button {
 .profile-notification__text {
   line-height: 180%;
 }
-
 .profile-notification__text a {
   color: #089BAB;
   text-decoration: none;
@@ -1021,7 +932,6 @@ button {
   background-color: white;
   border-radius: 35px;
 }
-
 .profile-user__data img {
   position: absolute;
   top: -7.81vh;
@@ -1089,7 +999,6 @@ button {
   justify-content: space-between;
   width: 30%;
 }
-
 .profile-user__macro-block h3 {
   color: rgba(0, 0, 0, 0.7);
   font-weight: 400;
@@ -1171,10 +1080,9 @@ button {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 3.95vh;
+  height: 7vh;
   padding: 0 3% 0 3%;
 }
-
 .profile-user__date h2 {
   font-weight: 700;
   font-size: 25px;
@@ -1245,45 +1153,38 @@ button {
   .profile-RSK {
     width: 43.54vw;
   }
-
   .profile-RSK__title {
     font-weight: 400;
     font-size: 23px;
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__kkal {
     font-weight: 500;
     font-size: calc((100vw - 773px) / 27);
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__macro {
     font-weight: 700;
     font-size: calc((100vw - 373px) / 53);
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__weight {
     font-weight: 400;
     font-size: calc((100vw - 373px) / 53);
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__form-attribute,
   .profile-paternity {
     font-weight: 300;
     font-size: calc((100vw + 1760px) / 160);
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__form-input,
   .profile-welcome__form-input {
     font-weight: 300;
     font-size: calc((100vw + 1440px) / 160);
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__form-button,
   .profile-welcome__form-button,
   .profile-welcome__button-reg {
@@ -1291,116 +1192,93 @@ button {
     font-size: calc((100vw + 1760px) / 160);
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-welcome {
     width: 34.72vw;
     margin-right: 5.35vw;
   }
-
   .profile-welcome__form-greet {
     font-weight: 600;
     font-size: calc((100vw + 2720px) / 160);
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-welcome__form-inputs {
     margin-top: 3.23vh;
   }
-
   .profile-notification__text {
     font-weight: 500;
     font-size: 18px;
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-user__data-name {
     font-weight: 600;
     font-size: calc((100vw + 640px) / 80);
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-user__data-age {
     font-size: calc((100vw + 160px) / 80);
   }
-
   .profile-user__date h2,
-
   .profile-user__kkal-amount {
     font-size: calc((100vw - 106px) / 53);
   }
-
   .profile-user__date-value {
     font-size: calc((100vw - 266px) / 53);
   }
-
   .profile-user__states-block {
     font-size: 20px;
   }
-
   .profile-user__kkal-name {
     font-size: calc((100vw - 160px) / 80);
   }
-
   .profile-user__macro-block h3 {
     font-size: calc((100vw - 373px) / 53);
   }
-
   .profile-user__macro-amount {
     font-size: calc((100vw + 1440px) / 160);
   }
-
   .profile-user__water-tracker {
     font-size: calc((100vw + 400px) / 80);
   }
-
   .profile-user__water-amount {
     font-size: calc((100vw - 106px) / 53);
   }
 }
-
 @media screen and (min-width: 1441px) and (max-width: 1920px) {
   .profile-RSK {
     width: 627px;
   }
-
   .profile-RSK__title {
     font-weight: 400;
     font-size: 23px;
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__kkal {
     font-weight: 500;
     font-size: 25px;
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__macro {
     font-weight: 700;
     font-size: 20px;
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__weight {
     font-weight: 400;
     font-size: 20px;
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__form-attribute,
   .profile-paternity {
     font-weight: 300;
     font-size: 20px;
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__form-input,
   .profile-welcome__form-input {
     font-weight: 300;
     font-size: 18px;
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__form-button,
   .profile-welcome__form-button,
   .profile-welcome__button-reg {
@@ -1408,68 +1286,57 @@ button {
     font-size: 20px;
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-welcome {
     width: 500px;
     margin-right: 77px;
   }
-
   .profile-welcome__form-greet {
     font-weight: 600;
     font-size: 26px;
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-notification__text {
     font-weight: 500;
     font-size: 25px;
     font-family: "Montserrat", sans-serif;
   }
 }
-
 @media screen and (min-width: 1921px) {
   .profile-RSK {
     width: 32.66vw;
   }
-
   .profile-RSK__title {
     font-weight: 400;
     font-size: calc((100vw + 45px) / 85);
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__kkal {
     font-weight: 500;
     font-size: calc((100vw + 216px) / 85);
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__macro {
     font-weight: 700;
     font-size: calc((100vw - 210px) / 85);
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__weight {
     font-weight: 400;
     font-size: calc((100vw - 416px) / 75);
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__form-attribute,
   .profile-paternity {
     font-weight: 300;
     font-size: calc((100vw - 40px) / 94);
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__form-input,
   .profile-welcome__form-input {
     font-weight: 300;
     font-size: calc((100vw + 70px) / 110);
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-RSK__form-button,
   .profile-welcome__form-button,
   .profile-welcome__button-reg {
@@ -1477,58 +1344,47 @@ button {
     font-size: calc((100vw - 211px) / 85);
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-welcome {
     width: 26vw;
     margin-right: 4vw;
   }
-
   .profile-welcome__form-greet {
     font-weight: 600;
     font-size: calc((100vw - 290px) / 62);
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-notification__text {
     font-weight: 500;
     font-size: calc((100vw + 12580px) / 580);
     font-family: "Montserrat", sans-serif;
   }
-
   .profile-user__data-name,
   .profile-user__states-name,
   .profile-user__kkal-amount,
   .profile-user__water-amount {
     font-size: calc((100vw + 365px) / 91);
   }
-
   .profile-user__data-age {
     font-size: calc((100vw - 457px) / 91);
   }
-
   .profile-user__states-value,
   .profile-user__date h2 {
     font-size: calc((100vw + 365px) / 91);
   }
-
   .profile-user__date-value {
     font-size: calc((100vw + 91px) / 91);
   }
-
   .profile-user__kkal-name,
   .profile-user__macro-block h3 {
     font-size: calc((100vw - 91px) / 91);
   }
-
   .profile-user__macro-amount_span {
     font-size: calc((100vw - 274px) / 91);
   }
-
   .profile-user__water-tracker {
     font-size: calc((100vw + 182px) / 91);
   }
 }
-
 .font-black {
   color: rgba(0, 0, 0, 0.7);
 }
@@ -1565,17 +1421,13 @@ button {
     display: none;
   }
 }
-
 @media screen and (min-width: 1280px) and (max-width: 1920px) {
   .wrapper {
     max-width: 1440px;
   }
 }
-
 @media screen and (min-width: 1921px) {
   .wrapper {
     width: 75vw;
   }
-}
-
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
