--- a/assets/styles/scss/main.css
+++ b/assets/styles/scss/main.css
@@ -397,14 +397,13 @@ body {
   border-radius: 0 0 35px 35px;
 }
 
-.diary-table-string-2,
 .diary-table-string-1,
 .diary-table-string {
   display: flex;
   justify-content: space-between;
   height: 64px;
 }
-.diary-table-string-2__meal-name,
+
 .diary-table-string-1__meal-name,
 .diary-table-string__meal-name {
   display: flex;
@@ -413,13 +412,13 @@ body {
   margin-left: 3%;
   width: 15%;
 }
-.diary-table-string-2__meal-name_color_orange,
+
 .diary-table-string-1__meal-name_color_orange,
 .diary-table-string__meal-name_color_orange {
   color: #FF7C02;
   font-weight: 700;
 }
-.diary-table-string-2__add-btn,
+
 .diary-table-string-1__add-btn,
 .diary-table-string__add-btn {
   background-color: transparent;
@@ -428,13 +427,16 @@ body {
   margin-top: 5%;
   transition-duration: 0.7s;
 }
-.diary-table-string-2__add-btn-img,
+
 .diary-table-string-1__add-btn-img,
 .diary-table-string__add-btn-img {
   max-width: 35px;
 }
-.diary-table-string-2__column-names,
 .diary-table-string-1__column-names,
+.diary-table-string__add-btn-img {
+  max-width: 35px;
+}
+
 .diary-table-string__column-names {
   display: flex;
   justify-content: space-between;
@@ -445,14 +447,13 @@ body {
   font-size: 16px;
   font-family: "Montserrat", sans-serif;
 }
-.diary-table-string-2__column-names_color_dark-blue,
+
 .diary-table-string-1__column-names_color_dark-blue,
 .diary-table-string__column-names_color_dark-blue {
   color: #089BAB;
   font-weight: 700;
-  text-align: left;
 }
-.diary-table-string-2_color_blue,
+
 .diary-table-string-1_color_blue,
 .diary-table-string_color_blue {
   background-color: #E4EEEE;
@@ -1218,7 +1219,8 @@ button {
     font-size: calc((100vw + 160px) / 80);
   }
   .profile-user__date h2,
-.profile-user__kkal-amount {
+
+  .profile-user__kkal-amount {
     font-size: calc((100vw - 106px) / 53);
   }
   .profile-user__date-value {
@@ -1409,11 +1411,10 @@ button {
 
 .profile-welcome__wripper,
 .profile-paternity {
-  display: block;
+  display: flex;
 }
 
-.profile-user,
-.profile-user__settings {
+.profile-user {
   display: none;
 }
 
