--- a/assets/styles/scss/pages/index.css
+++ b/assets/styles/scss/pages/index.css
@@ -280,6 +280,7 @@ input:hover {
 }
 
 .profile-notification {
+  display: none;
   position: fixed;
   width: 100%;
   min-height: 100%;
@@ -374,6 +375,7 @@ input:hover {
   flex-grow: 1;
   justify-content: space-between;
   width: 100%;
+  height: 60%;
 }
 
 .profile-user__kkal-block {
