--- a/assets/styles/scss/pages/index.scss
+++ b/assets/styles/scss/pages/index.scss
@@ -279,6 +279,7 @@ input:hover {
 }
 
 .profile-notification {
+    display: none;
     position: fixed;
 
     width: 100%;
@@ -390,6 +391,7 @@ input:hover {
     justify-content: space-between;
 
     width: 100%;
+    height: 60%;
 }
 
 .profile-user__kkal-block {
